# newsflow

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PRODUCT.md  README.md  netlify.toml  pyproject.toml  requirements.txt  test_et_ingestion.py
.claude/: settings.json  settings.local.json
agents/: audio_producer.py  curator.py  ingestion.py  script_validator.py  script_writer.py  summarizer.py
config/: preferences.yaml  senders.yaml  tts_config.yaml
delivery/: drive_uploader.py  email_sender.py
docs/: DESIGN.md
mcp_servers/: article_fetcher_server.py
models/: article.py  enums.py  podcast.py
orchestrator/: pipeline.py  run_review.py  scheduler.py
parsers/: base_parser.py  et_ai_parser.py  ettech_parser.py  generic_parser.py  harper_carroll_parser.py  techcrunch_parser.py  tldr_parser.py  variant_detector.py
scraper/: article_scraper.py  ddg_scraper.py  inc42_scraper.py
scripts/: com.newsflow.daily.plist  com.newsflow.weekend.plist  daily_run.sh  reauth_gmail.py  test_india_chain.py
tests/test_agents/: test_curator_batch_retry.py  test_curator_funding_override.py  test_inc42_scraper.py  test_pipeline_expansion_logging.py  test_script_writer_json.py  test_semantic_dedup.py  test_summarizer_openrouter.py
tests/test_parsers/: test_et_ai_parser.py  test_ettech_parser.py
utils/: llm_client.py
web/: middleware.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AudioPlayer.tsx  DashboardClient.tsx  EpisodeList.tsx  SettingsPanel.tsx  WaitlistForm.tsx
web/lib/: email.ts  (+6 more)
(+94 files in other folders)
