[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "newsflow-ai"
version = "0.1.0"
description = "Multi-agent pipeline that transforms daily newsletters into an AI-narrated podcast"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "models*", "parsers*", "scraper*", "orchestrator*", "delivery*"]

[project.scripts]
newsflow = "orchestrator.pipeline:main"
